syntax = "proto3";
package proto;

option go_package = "github.com/lquyet/distributed-lock/proto";

import "models.proto";

service ClientService {
  rpc AcquireLock(AcquireLockRequest) returns (AcquireLockResponse);
  rpc ReleaseLock(ReleaseLockRequest) returns (ReleaseLockResponse);
}