syntax = "proto3";
package proto;

option go_package = "github.com/lquyet/distributed-lock/proto";

service RequestService {
  rpc SendRequest(Req) returns (Resp);
}

message Req {
  string key = 1;
  string value = 2;
}

message Resp {
  string status = 1;
}